[package]
name = "cdn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
rusqlite = "0.31.0"
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
minify-js = "0.6.0"
css-minify = "0.3.1"
nanoid = "0.4.0"
tokio = { version = "1", features = ["full"] }
minify-html = "0.15.0"

[dependencies.xxhash-rust]
version = "0.8.5"
features = ["xxh3", "const_xxh3"]

[workspace]
