[package]
name = "cdn"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
minify-js = "0.6.0"
css-minify = "0.3.1"
nanoid = "0.4.0"
tokio = { version = "1", features = ["full"] }
minify-html = "0.15.0"
tokio-stream = "0.1.15"
tokio-util = "0.7.10"
tide = "0.15.0"
async-std = { version = "1.9.0", features = ["attributes"] }
base64 = "0.13.0"
colored = "2"
jsonwebtoken = "9"
rusqlite = { version = "0.31.0", features = ["bundled"] }
chrono = "0.4"
futures = "0.3"
argon2 = "0.5.3"

[dependencies.xxhash-rust]
version = "0.8.5"
features = ["xxh3", "const_xxh3"]

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[workspace]

[profile.release]
strip = true
opt-level = 3
lto = true
# codegen-units = 1
